--- a/binge_hub/main/templates/django_registration/activation_complete.html
+++ b/binge_hub/main/templates/django_registration/activation_complete.html
@@ -52,7 +52,8 @@
         </style>
     </head>
 <body>
-    <h2>Account activation almost completed</h2>
-    <p>Your BingeHub account has been successfully created.<br>Please activate your account by clicking on the link in the email</p>
+    <h2>Account activation completed</h2>
+    <p>Your BingeHub account has been successfully activated.<br>Please go to login</p>
+    <a href="{% url 'login' %}">Go to login</a>
 </body>
 </html>
