fix all bugs on registration form, add all the sytles and redirects

--- a/binge_hub/main/templates/django_registration/activation_complete.html
+++ b/binge_hub/main/templates/django_registration/activation_complete.html
@@ -54,6 +54,6 @@
 <body>
     <h2>Account activation completed</h2>
     <p>Your BingeHub account has been successfully activated.<br>Please go to login</p>
-    <a href="{% url 'login' %}">Go to login</a>
+    <a href="http://localhost:4200/login">Go to login</a>
 </body>
 </html>
