--- a/binge_hub/main/templates/django_registration/activation_failed.html
+++ b/binge_hub/main/templates/django_registration/activation_failed.html
@@ -53,6 +53,6 @@
     </head>
 <body>
     <h2>Account activation failed!</h2>
-    <a href="{% url 'start' %}">Go back</a>
+    <a href="http://localhost:4200/start">Go back</a>
 </body>
 </html>
