--- a/binge_hub/main/templates/django_registration/registration_form.html
+++ b/binge_hub/main/templates/django_registration/registration_form.html
@@ -1,44 +1,64 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>BingeHub Registration</title>
-        <base href="/">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/registration_form.css' %}">
-        <script src="{% static 'js/registration_form.js' %}"></script>
-    </head>
-<body>
-<div class="register-bg">
-    <form id="registration-form" onsubmit="return validateForm()">
-        <div class="center"><h1>Sign Up</h1></div>
-        {% csrf_token %}
+  <head>
+    <meta charset="utf-8" />
+    <title>BingeHub Registration</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/registration_form.css' %}"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <script src="{% static 'js/registration_form.js' %}"></script>
+  </head>
 
-        <p class="required">
-            <label for="id_username" class="required">Username:</label>
-            <input type="text" id="id_username" name="username" placeholder="Username">
-            <span class="helptext" id="id_username_helptext"></span>
-        </p>
-        <p class="required">
-            <label for="id_email" class="required">Email:</label>
-            <input type="email" id="id_email" name="email" placeholder="Email">
-            <span class="helptext" id="id_email_helptext"></span>
-        </p>
-        <p class="required">
-            <label for="id_password1" class="required">Password:</label>
-            <input type="password" id="id_password1" name="password1" placeholder="Password">
-            <span class="helptext" id="id_password1_helptext"></span>
-        </p>
-        <p class="required">
-            <label for="id_password2" class="required">Password confirmation:</label>
-            <input type="password" id="id_password2" name="password2" placeholder="Password confirmation">
-            <span class="helptext" id="id_password2_helptext"></span>
-        </p>
+  <body>
 
-        <div class="center"><button type="button" onclick="validateForm()">Get started</button></div>
-        <p>adsignOIIfij1884##d-$</p>
-    </form>
-</div>
-</body>
+    <header>
+      <div class="container">
+        <div class="flex-c-c logo">
+            <i class="material-icons">play_circle</i>
+            <a href="http://localhost:4200/start"><p>BINGE HUB</p></a>
+        </div>
+        <div id="logIn">
+          <button class="login-btn flex-c-c" onclick="window.location.href='http://localhost:4200/login'">
+            <i class="material-icons">login</i>Login
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <div class="register-bg">
+
+        <form method="post">
+            <div class="center"><h1>Sign Up</h1></div>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Get Startet</button>
+        </form>
+
+        <div class="flex-c-c gap-32 legals">
+            <p>Imprint</p>
+            <p>Privacy Policy</p>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            let userAgent = navigator.userAgent;
+            var isFirefox = typeof InstallTrigger !== 'undefined';
+    
+            //console.log("isFirefox: ", isFirefox);
+            //console.log("userAgent: ", userAgent);
+    
+            if (/Chrome/.test(userAgent) && !/Chromium/.test(userAgent)) {
+                document.body.classList.add('chrome');
+                //console.log("Chrome detected, class added.");
+            }
+            if (isFirefox) {
+                document.body.classList.add('firefox');
+                //console.log("Firefox detected, class added.");
+            }
+        });
+      </script>
+  </body>
 </html>
