add the legals links to register form

--- a/binge_hub/main/templates/django_registration/registration_form.html
+++ b/binge_hub/main/templates/django_registration/registration_form.html
@@ -36,9 +36,9 @@
             <button type="submit">Get Startet</button>
         </form>
 
-        <div class="flex-c-c gap-32 legals">
-            <p>Imprint</p>
-            <p>Privacy Policy</p>
+        <div class="flex-c-c gap-64 legals">
+            <a href="http://localhost:4200/privacy-policy"><p>Privacy Policy</p></a>
+            <a href="http://localhost:4200/imprint"><p>Imprint</p></a>
         </div>
     </div>
 
