--- a/binge_hub/main/templates/django_registration/activation_email_body.html
+++ b/binge_hub/main/templates/django_registration/activation_email_body.html
@@ -5,90 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration Confirmation</title>
   </head>
-  <body
-    style="
-      font-family: Roboto, sans-serif;
-      background-color: #070e27;
-      color: #ffffff;
-      max-width: 100%;
-      max-height: 100vh;
-      margin: 0 auto;
-      padding: 64px;
-      border: none;
-      overflow: hidden;
-    "
-  >
-    <div>
-      <div>
-        <div
-          style="
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 16px;
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 50px;
-            border: solid 3px;
-            border-image: linear-gradient(
-                to right,
-                #09f1b8,
-                #00a2ff,
-                #ff00d2,
-                #fed90f
-              )
-              1;
-            padding: 8px 18px;
-            max-width: fit-content;
-          "
-        >
-          <div
-            style="
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              background-color: #f0f0f0;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              position: relative;
-            "
-          >
-            <div
-              style="
-                width: 0;
-                height: 0;
-                border-left: 10px solid transparent;
-                border-right: 10px solid transparent;
-                border-bottom: 20px solid #070e27;
-                position: absolute;
-                transform: rotate(90deg);
-              "
-            ></div>
-          </div>
-          BINGEHUB
-        </div>
-      </div>
-      <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
-        Dear {{ user.username }},
-      </p>
-      <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
-        Thank you for registering with BINGEHUB. To complete your registration
-        and verify your email address, please click the link below:
-      </p>
-      <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
-        <a
-          href="{{ activation_link }}"
-          style="color: #ffffff; text-decoration: underline"
-          >Activate your account</a
-        >
-      </p>
-      <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
-        If you did not create an account with us, please disregard this email.
-      </p>
-      <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
-        Best regards,<br />Your BINGEHUB Team
-      </p>
-    </div>
+  <body style="font-family: Roboto, sans-serif; background-color: #070e27; color: #ffffff; max-width: 100%; max-height: 100vh; margin: 0 auto; padding: 64px; border: none; overflow: hidden;">
+    <img src="cid:logo" alt="BINGEHUB Logo" width="200px" height="auto">
+    <p style="font-size: 16px; line-height: 1.6; color: #ffffff;text-transform: capitalize;">
+      Dear {{ user.username }},
+    </p>
+    <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
+      Thank you for registering with BINGEHUB. To complete your registration
+      and verify your email address, please click the link below:
+    </p>
+    <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
+      <a
+        href="{{ activation_link }}"
+        style="color: #ffffff; text-decoration: underline"
+        >Activate your account</a
+      >
+    </p>
+    <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
+      If you did not create an account with us, please disregard this email.
+    </p>
+    <p style="font-size: 16px; line-height: 1.6; color: #ffffff">
+      Best regards,<br />Your BINGEHUB Team
+    </p>
   </body>
 </html>
